Revision history for Perl module Acme::Ford::Prefect::FFI

0.10  Feb 13, 2015
  - Use FFI::CheckLib now not experimental recursive (was _r)
    option.

0.09  Feb 12, 2015
  - Use FFI::CheckLib experimental _r option to see
    if we can more reliably test this via cpan testers.

0.08  Feb 6, 2015
  - Add README
  - Specify license in POD

0.07  Jan 22, 2015
  - FFI::Platypus 0.09 compatability

0.06  Jan 17, 2015
  - Migrate to FFI::Platypus
  - Non CPAN release

0.05  Jan 17, 2015
  - Require Acme::Alien::DontPanic 0.011

0.04  Oct 14, 2014
  - Require Acme::Alien::DontPanic 0.009

0.03  Oct 10, 2014
  - Add ddditional diagnostic for test phase

0.02  Oct 9, 2014
  - Require Acme::Alien::DontPanic 0.008
    which correctly builds dlls on MSWin32

0.01  Sep 11, 2014
  - Initial release