@@ -5,4 +5,4 @@
 /MYMETA.yml
 /_build
 /blib
-/Acme-Ford-Prefect-FFI-*.tar.gz
+/Acme-Ford-Prefect-FFI-*
